# ruleset-checking-tool

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  get_HVAC_building_area_types_and_zones.md  get_zone_eflh.md  is_CZ_0_to_3a.md  pyproject.toml  ruleset-checking-tool-api.yaml  setup.cfg
.github/workflows/: auto-feature-pr.yml  pre_release.yml  python-app.yml  release.yml
docs/: Rule15-1.md  Rule15-2.md  Rule15-3.md  Rule15-4.md  Rule15-5.md  Rule15-6.md  Rule5-7-1.md  Table8-4-4.md  _functions.md  _output_project_test_report_template.md  _output_report_template.md  _output_software_test_report_template.md  _output_test_report_template.md  _rule_template.md  _ruleset_functions.md  _toc.md
docs/Section 11/: Rule11-3
docs/Section 18/: 18-23.md
docs/Section 4/: 4-10.md  4-3.md  4-4.md  4-5.md  4-6.md
docs/data_tables/: Table8-4-4.md  TableG3-1-1-1.md
docs/ruleset_functions/: aggregate_min_OA_schedule_across_zones.md  are_all_hvac_sys_fan_objs_autosized.md  are_all_terminal_CHW_loops_purchased_cooling.md  are_all_terminal_cool_sources_chilled_water(hvac.id).md  are_all_terminal_cool_sources_none_or_null(hvac.id).md  are_all_terminal_fan_configs_parallel.md  are_all_terminal_fans_null(hvac.id).md  are_all_terminal_heat_sources_HW.md  are_all_terminal_heat_sources_hot_water(hvac.id).md  are_all_terminal_heat_sources_none_or_null(hvac.id).md  (+177 more)
examples/: baseline_rmd.json  baseline_rmr.json  proposed_rmd.json  proposed_rmr.json  user_rmd.json  user_rmr.json
rct229/: ASHRAE9012019SoftwareTestReport.json  cli.py  ruleset_functions.py  run_local.py  web_app_test.py  web_application.py
test/: rct_test_helper.py  test_section1.py  test_section5.py
(+2332 files in other folders)
