[tool.poetry]
name = "ruleset-checking-tool"
version = "0.4.0"
description = "PNNL ruleset checking tool"
authors = ["Weili Xu <weili.xu@pnnl.gov>", "Charlie Holly <charlie.holly@pnnl.gov>", "Juan Gonzalez <juan.gonzalez@pnnl.gov>", "Yun Joon Jung <yunjoon.jung@pnnl.gov>", "Jiarong Xie <jiarong.xie@pnnl.gov>", "Jackson Jarbose <jackson@karpmanconsulting.net>", "Karen Walkerman <kwalkerman@gard.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rct229"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.21.1"
PyYAML = "^6.0.1"
jsonpointer = "^2.4"
pandas = "^2.2.1"
xlrd = "^1.2"
numpy = "^1.26.4"
Pint = "^0.23"
click = "^8.0.4"
regex = "^2022.1.18"
black = "^22.6.0"
jsonpath2 = "^0.4.5"
jsonpath-ng = "^1.6.1"
pyinstrument = "^4.6.2"
pydash = "^7.0.7"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
isort = "^5.10.1"
icecream = "^2.1.3"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
pre-commit = "^4.0.1"
astor = "^0.8.1"

[tool.poetry.scripts]
rct229 = 'rct229.cli:cli'
minify-jsons = 'rct229.utils.minify_jsons:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
