[metadata]
name = rct229
author = PNNL
description-file = README.md
license = MIT
keywords =
    codes
    simulation
    buildings

[files]
packages =
    rct229

[entry_points]
console_scripts =
    rct229 = rct229.cli:cli

[options]
install_requires =
    click
    jsonschema
    pyyaml
    jsonpointer
    pydash
    numpy
    pandas
    openpyxl
